添加跳转到展示页面的链接

--- a/index.html
+++ b/index.html
@@ -26,6 +26,20 @@
                 </div>
                 <h1 class="text-4xl font-bold mb-2">白的插件市场</h1>
                 <p class="text-white/80 text-lg">提交你的插件，与所有白的用户分享</p>
+                
+                <!-- 跳转链接 -->
+                <div class="flex justify-center gap-4 mt-6">
+                    <a href="https://whitesalary-plugins-view.vercel.app" target="_blank"
+                       class="bg-white/20 hover:bg-white/30 backdrop-blur rounded-xl px-5 py-2.5 flex items-center gap-2 transition-all">
+                        <span>👀</span>
+                        <span>浏览所有插件</span>
+                    </a>
+                    <a href="https://github.com/VBHC-UHY/whitesalary-plugins" target="_blank"
+                       class="bg-white/10 hover:bg-white/20 backdrop-blur rounded-xl px-5 py-2.5 flex items-center gap-2 transition-all">
+                        <span>📂</span>
+                        <span>GitHub</span>
+                    </a>
+                </div>
             </div>
         </div>
         
