统一分类名称为长格式（娱乐游戏而非娱乐）

--- a/index.html
+++ b/index.html
@@ -113,48 +113,48 @@
                                 <select x-model="form.category"
                                         class="w-full px-4 py-3 rounded-xl border border-gray-200 focus:border-purple-400 focus:ring-2 focus:ring-purple-100 transition-all">
                                     <optgroup label="🎯 热门分类">
-                                        <option value="娱乐">🎮 娱乐游戏</option>
-                                        <option value="实用">🛠️ 实用工具</option>
-                                        <option value="社交">💬 社交互动</option>
-                                        <option value="AI">🤖 AI增强</option>
+                                        <option value="娱乐游戏">🎮 娱乐游戏</option>
+                                        <option value="实用工具">🛠️ 实用工具</option>
+                                        <option value="社交互动">💬 社交互动</option>
+                                        <option value="AI增强">🤖 AI增强</option>
                                     </optgroup>
                                     <optgroup label="📺 媒体内容">
-                                        <option value="音乐">🎵 音乐音频</option>
-                                        <option value="图片">🖼️ 图片处理</option>
-                                        <option value="视频">📹 视频相关</option>
-                                        <option value="媒体">📺 媒体综合</option>
+                                        <option value="音乐音频">🎵 音乐音频</option>
+                                        <option value="图片处理">🖼️ 图片处理</option>
+                                        <option value="视频相关">📹 视频相关</option>
+                                        <option value="媒体综合">📺 媒体综合</option>
                                     </optgroup>
                                     <optgroup label="📰 信息资讯">
-                                        <option value="新闻">📰 新闻资讯</option>
-                                        <option value="天气">🌤️ 天气日历</option>
-                                        <option value="搜索">🔍 网络搜索</option>
-                                        <option value="翻译">🌐 翻译语言</option>
+                                        <option value="新闻资讯">📰 新闻资讯</option>
+                                        <option value="天气日历">🌤️ 天气日历</option>
+                                        <option value="网络搜索">🔍 网络搜索</option>
+                                        <option value="翻译语言">🌐 翻译语言</option>
                                     </optgroup>
                                     <optgroup label="⚡ 效率提升">
                                         <option value="自动化">⚡ 自动化</option>
-                                        <option value="提醒">⏰ 提醒备忘</option>
-                                        <option value="数据">📊 数据处理</option>
-                                        <option value="开发">💻 开发工具</option>
+                                        <option value="提醒备忘">⏰ 提醒备忘</option>
+                                        <option value="数据处理">📊 数据处理</option>
+                                        <option value="开发工具">💻 开发工具</option>
                                     </optgroup>
                                     <optgroup label="🎲 趣味休闲">
-                                        <option value="占卜">🔮 占卜算命</option>
-                                        <option value="恶搞">🃏 趣味恶搞</option>
-                                        <option value="角色">🎭 角色扮演</option>
-                                        <option value="抽奖">🎰 抽奖随机</option>
+                                        <option value="占卜算命">🔮 占卜算命</option>
+                                        <option value="趣味恶搞">🃏 趣味恶搞</option>
+                                        <option value="角色扮演">🎭 角色扮演</option>
+                                        <option value="抽奖随机">🎰 抽奖随机</option>
                                     </optgroup>
                                     <optgroup label="🏠 生活服务">
-                                        <option value="生活">🏠 生活服务</option>
-                                        <option value="学习">📚 学习教育</option>
-                                        <option value="财务">💰 财务金融</option>
-                                        <option value="健康">💪 健康运动</option>
+                                        <option value="生活服务">🏠 生活服务</option>
+                                        <option value="学习教育">📚 学习教育</option>
+                                        <option value="财务金融">💰 财务金融</option>
+                                        <option value="健康运动">💪 健康运动</option>
                                     </optgroup>
                                     <optgroup label="👥 群组管理">
-                                        <option value="群管">👮 群管理</option>
-                                        <option value="统计">📈 数据统计</option>
-                                        <option value="互动">🎉 群互动</option>
+                                        <option value="群管理">👮 群管理</option>
+                                        <option value="数据统计">📈 数据统计</option>
+                                        <option value="群互动">🎉 群互动</option>
                                     </optgroup>
                                     <optgroup label="🔧 其他">
-                                        <option value="系统">⚙️ 系统管理</option>
+                                        <option value="系统管理">⚙️ 系统管理</option>
                                         <option value="其他">📦 其他</option>
                                     </optgroup>
                                 </select>
@@ -314,7 +314,7 @@
                 cn_name: '',
                 author: '',
                 version: '1.0.0',
-                category: '娱乐',
+                category: '娱乐游戏',
                 description: '',
                 full_description: '',
                 features_text: '',
@@ -405,7 +405,7 @@ plugin = Plugin()
                     cn_name: '',
                     author: '',
                     version: '1.0.0',
-                    category: '娱乐',
+                    category: '娱乐游戏',
                     description: '',
                     full_description: '',
                     features_text: '',
